--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=Spring_deployement
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=Ijse@1234
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_dep?createDatabaseIfNotExist=true
+spring.datasource.password= RCJnhGgnfruIDDKvHtWbOiGHXgGCzbAS
+spring.datasource.url=jdbc:mysql://root:RCJnhGgnfruIDDKvHtWbOiGHXgGCzbAS@caboose.proxy.rlwy.net:14289/railway?createDatabaseIfNotExist=true
 sprig.datasource.hikari.maximum-pool-size=10
 
 
